--- a/assets/scss/_table.scss
+++ b/assets/scss/_table.scss
@@ -12,6 +12,7 @@
         font-size: 1.8rem;
         margin: 1rem;
         padding: 1rem;
+        text-transform: capitalize;
         &:first-child{
             border-radius: 1rem 0 0 1rem;
         }
