--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,8 +43,10 @@ body {
   flex-direction: column;
   justify-content: center;
   font-size: 1.8rem;
-  padding: .2rem;
-  text-transform: capitalize; }
+  padding: 2rem;
+  border-radius: 1rem;
+  text-transform: capitalize;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 0.5rem 1.5rem; }
   .insert input {
     background-color: #EAEAEA;
     border-radius: 1rem;
@@ -63,16 +65,17 @@ body {
   border-radius: 1rem;
   padding: 1rem;
   background-color: #E4E4E4;
-  border-spacing: 0rem; }
+  border-spacing: 0rem;
+  text-transform: capitalize; }
   .list caption {
     font-size: 3rem;
-    font-weight: 900; }
+    font-weight: 900;
+    padding: 1rem; }
   .list th {
     background-color: #BDC2C8;
     font-size: 1.8rem;
     margin: 1rem;
-    padding: 1rem;
-    text-transform: capitalize; }
+    padding: 1rem; }
     .list th:first-child {
       border-radius: 1rem 0 0 1rem; }
     .list th:last-child {
