--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -3,8 +3,10 @@
     flex-direction: column;
     justify-content: center;
     font-size: 1.8rem;
-    padding: .2rem;
+    padding: 2rem;
+    border-radius: 1rem;
     text-transform: capitalize;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px .5rem 1.5rem;
     input{
         background-color: $colorSecondary;
         border-radius: 1rem;
