--- a/assets/scss/_table.scss
+++ b/assets/scss/_table.scss
@@ -3,16 +3,17 @@
     padding: 1rem;
     background-color: $colorBgPrimary;
     border-spacing: 0rem;
+    text-transform: capitalize;
     caption{
         font-size: 3rem;
         font-weight: 900;
+        padding: 1rem;
     }
       th{
         background-color: $colorOnPrimary;
         font-size: 1.8rem;
         margin: 1rem;
         padding: 1rem;
-        text-transform: capitalize;
         &:first-child{
             border-radius: 1rem 0 0 1rem;
         }
