--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,7 @@ body {
   padding: 2rem;
   border-radius: 1rem;
   text-transform: capitalize;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 0.5rem 1.5rem; }
+  box-shadow: rgba(0, 0, 0, 0.35) 0 0.5rem 1.5rem; }
   .insert input {
     background-color: #EAEAEA;
     border-radius: 1rem;
