--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -6,7 +6,7 @@
     padding: 2rem;
     border-radius: 1rem;
     text-transform: capitalize;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px .5rem 1.5rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0 .5rem 1.5rem;
     input{
         background-color: $colorSecondary;
         border-radius: 1rem;
