--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,11 @@ body {
   flex-direction: row;
   justify-content: space-around;
   align-items: center; }
+  @media screen and (max-width: 1150px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; } }
 
 .btn {
   border-radius: 1rem;
