--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -32,6 +32,11 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    @media screen and (max-width: 1150px){
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 .btn {
