--- a/assets/scss/_table.scss
+++ b/assets/scss/_table.scss
@@ -27,7 +27,7 @@
         td{
             font-size: 1.8rem;
             padding: 1.4rem 2.8rem;
-    
+            text-align: center;
             .delete{
                 background-color: $colorBtnDelete;
             }
